@@ -4,6 +4,10 @@ Immediate things:
  and scrn.c with color support.  I need to merge it in.  I still need a
  database for syntax highlighting.  Emacs re-colors after no activity.
 
+ Paragraph reformat mode for TeX files.
+
+ ^G Matching for verilog begin ... end, html tags, etc.
+
  Better environment settings for shell windows.
 
  Gettext: merge yes or no?  I need a non-english speaking
