@@ -19,47 +19,54 @@ extern int dostaupd;
 
 static void menufllw(MENU *m)
 {
-	m->top = m->cursor - m->cursor % m->perline;
+	if (m->cursor < m->top)
+		m->top = m->cursor - m->cursor % m->perline;
+	else if (m->cursor >= m->top+m->perline*m->h)
+		m->top = m->cursor - m->cursor % m->perline - m->perline*(m->h-1);
 }
 
 static void menudisp(MENU *m)
 {
 	int col;
 	int x;
+	int y;
 	int *s = m->t->t->scrn + m->x + m->y * m->t->t->co;
 
-	col = 0;
-	for (x = 0; x != m->perline && m->list[x + m->top]; ++x) {
-		int atr, z;
-
-		if (x + m->top == m->cursor)
-			atr = INVERSE;
-		else
-			atr = 0;
-		if (col == m->w)
-			break;
-		for (z = 0; m->list[x + m->top][z]; ++z) {
+	for (y = 0; y != m->h; ++y) {
+		col = 0;
+		for (x = 0; x != m->perline && y*m->perline+x+m->top<m->nitems; ++x) {
+			int atr, z;
+	
+			if (x + y*m->perline + m->top == m->cursor)
+				atr = INVERSE;
+			else
+				atr = 0;
 			if (col == m->w)
 				break;
-			outatr(m->t->t, s + col, m->x + col, m->y, m->list[x + m->top][z], atr);
-			++col;
+			for (z = 0; m->list[x + y*m->perline + m->top][z]; ++z) {
+				if (col == m->w)
+					break;
+				outatr(m->t->t, s + col, m->x + col, m->y+y, m->list[x + y*m->perline + m->top][z], atr);
+				++col;
+			}
+			while (z < m->width) {
+				if (col == m->w)
+					break;
+				outatr(m->t->t, s + col, m->x + col, m->y+y, ' ', 0);
+				++col;
+				++z;
+			}
+			if (col != m->w) {
+				outatr(m->t->t, s + col, m->x + col, m->y+y, ' ', 0);
+				++col;
+			}
 		}
-		while (z < m->width) {
-			if (col == m->w)
-				break;
-			outatr(m->t->t, s + col, m->x + col, m->y, ' ', 0);
-			++col;
-			++z;
-		}
-		if (col != m->w) {
-			outatr(m->t->t, s + col, m->x + col, m->y, ' ', 0);
-			++col;
-		}
+		if (col != m->w)
+			eraeol(m->t->t, m->x + col, m->y+y);
+	s += m->t->t->co;
 	}
-	if (col != m->w)
-		eraeol(m->t->t, m->x + col, m->y);
-	m->parent->cury = 0;
-	m->parent->curx = (m->cursor - m->top) * (m->width + 1);
+	m->parent->cury = (m->cursor - m->top) / m->perline;
+	m->parent->curx = ((m->cursor - m->top) % m->perline) * (m->width + 1);
 }
 
 static void menumove(MENU *m, int x, int y)
@@ -148,13 +155,91 @@ int umuparw(MENU *m)
 
 int umdnarw(MENU *m)
 {
+	int col = m->cursor % m->perline;
+
+        m->cursor -= col;
+
 	if (m->cursor + m->perline < m->nitems) {
 		m->cursor += m->perline;
+		if (m->cursor + col >= m->nitems)
+			if (m->nitems)
+				m->cursor = m->nitems - 1;
+			else
+				m->cursor = 0;
+		else
+			m->cursor += col;
 		return 0;
-	} else if (m->top + m->perline < m->nitems)
-		return umeof(m);
-	else
+	} else {
+		m->cursor += col;
 		return -1;
+	}
+}
+
+int umpgup(MENU *m)
+{
+	int amnt = (m->h+1)/2;
+	if (m->top >= amnt*m->perline) {
+		m->top -= amnt*m->perline;
+		m->cursor -= amnt*m->perline;
+		return 0;
+	} else if (m->top) {
+		m->cursor -= m->top;
+		m->top = 0;
+		return 0;
+	} else if (m->cursor >= m->perline) {
+		m->cursor = m->cursor % m->perline;
+		return 0;
+	} else
+		return -1;
+}
+
+int umpgdn(MENU *m)
+{
+	int amnt = (m->h+1)/2;
+	int col = m->cursor % m->perline;
+	int y = m->cursor / m->perline;
+	int h = (m->nitems + m->perline - 1) / m->perline;
+	int t = m->top / m->perline;
+	m->cursor -= col;
+
+	if (t + m->h + amnt <= h) {
+		m->top += amnt*m->perline;
+		m->cursor += amnt*m->perline;
+		if (m->cursor + col >= m->nitems)
+			if (m->nitems)
+				m->cursor = m->nitems - 1;
+			else
+				m->cursor = 0;
+		else
+			m->cursor += col;
+		return 0;
+	} else if (t + m->h < h) {
+		amnt = h - (t + m->h);
+		m->top += amnt*m->perline;
+		m->cursor += amnt*m->perline;
+		if (m->cursor + col >= m->nitems)
+			if (m->nitems)
+				m->cursor = m->nitems - 1;
+			else
+				m->cursor = 0;
+		else
+			m->cursor += col;
+		return 0;
+	} else if (y+1!=h) {
+		m->cursor = (h-1)*m->perline;
+		if (m->cursor + col >= m->nitems)
+			if (m->nitems)
+				m->cursor = m->nitems - 1;
+			else
+				m->cursor = 0;
+		else
+			m->cursor += col;
+		return 0;
+	} else {
+		m->cursor += col;
+		return -1;
+	}
+
 }
 
 static int umrtn(MENU *m)
@@ -250,7 +335,7 @@ void ldmenu(MENU *m, char **s, int cursor)
 
 MENU *mkmenu(W *w, char **s, int (*func) (/* ??? */), int (*abrt) (/* ??? */), int (*backs) (/* ??? */), int cursor, void *object, int *notify)
 {
-	W *new = wcreate(w->t, &watommenu, w, w, w->main, 1, NULL, notify);
+	W *new = wcreate(w->t, &watommenu, w, w, w->main, 4, NULL, notify);
 	MENU *m;
 
 	if (!new) {
@@ -270,6 +355,7 @@ MENU *mkmenu(W *w, char **s, int (*func) (/* ??? */), int (*abrt) (/* ??? */), i
 	m->w = new->w;
 	m->x = new->x;
 	m->y = new->y;
+	m->top = 0;
 	ldmenu(m, s, cursor);
 	w->t->curwin = new;
 	return m;
